# Parallel-Vector-Similarity-Search

./: .gitignore  HPC_Project_Final.pptx  README.md  hpc-eda.ipynb  plot.ipynb  requirements.txt
hpc_search/: CMakeLists.txt
hpc_search/include/: fingerprint_db.h
hpc_search/src/: io.cpp  kmeans_main.cpp  kmeans_openmp_simd.cpp  kmeans_sequential.cpp  main.cpp  search_openmp.cpp  search_sequential.cpp  search_simd.cpp
